添加了晒宝界面

--- a/CBChaoBaoLife/test.plist
+++ b/CBChaoBaoLife/test.plist
@@ -16,7 +16,7 @@
 		<key>name</key>
 		<string>从小就很帅</string>
 		<key>text</key>
-		<string>!!!!!!!!!!!!!~~~~~~~~~~~~~~~~~~~~~~~~!!!!!!!!!!!!!!!!!!!!!!!!!!!!~~~~~app大卖！！！！！！！！！！！！～～～～～～～～～～～～～～</string>
+		<string>历经磨难，青蛙王子终于跳上餐桌，希望公主能给他一个吻。公主一见到他，满心欢喜，吧唧着嘴说：「哇塞，好肥的田鸡啊！」</string>
 		<key>icon</key>
 		<string>icon_01</string>
 	</dict>
